--- a/docker-compose.yml.j2
+++ b/docker-compose.yml.j2
@@ -97,6 +97,7 @@ services:
       - SE_EVENT_BUS_HOST=seleniarm-hub
       - SE_EVENT_BUS_PUBLISH_PORT=4442
       - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+      - SE_START_VNC=false
     networks:
       - parser_network
 
