--- a/docker-compose.infrastructure.build.yml.j2
+++ b/docker-compose.infrastructure.build.yml.j2
@@ -72,6 +72,7 @@ services:
       - parser_network
 
   items:
+    image: items_prices_parser
     container_name: items_prices_parser
     build:
       context: scrappers
