--- a/docker-compose.worker.build.yml.j2
+++ b/docker-compose.worker.build.yml.j2
@@ -8,7 +8,6 @@ x-db-credentials: &db_credentials
   POSTGRES_PORT: ${POSTGRES_PORT}
 
 x-template_api_parser_service: &template_api_parser_service
-  image: worker
   build:
     context: scrappers
     dockerfile: template_parser_api/Dockerfile
@@ -52,7 +51,8 @@ services:
 {% for market_type in market_types %}
   {{ market_type.lower().replace('-', '_') }}_parser:
     <<: *template_api_parser_service
-    container_name: {{ market_type.lower().replace('-', '_') }}_parser:
+    image: worker
+    container_name: {{ market_type.lower().replace('-', '_') }}_parser
     environment:
       <<: *db_credentials
       REDIS_PWD: ${REDIS_PWD}
