--- a/docker-compose.dashboard.build.yml.j2
+++ b/docker-compose.dashboard.build.yml.j2
@@ -20,6 +20,8 @@ services:
       dockerfile: ./app/Dockerfile
     environment:
       <<: *db_credentials
+      SUPABASE_URL: ${SUPABASE_URL}
+      SUPABASE_PUBLIC_KEY: ${SUPABASE_PUBLIC_KEY}
       SENTRY_AUTH_TOKEN: ${SENTRY_AUTH_TOKEN}
       SENTRY_ORG: ${SENTRY_ORG}
       SENTRY_PROJECT: ${SENTRY_PROJECT}
