--- a/docker-compose.worker.build.yml.j2
+++ b/docker-compose.worker.build.yml.j2
@@ -29,7 +29,7 @@ services:
       REDIS_PWD: ${REDIS_PWD}
       REDIS_HOST: ${REDIS_HOST}
       REDIS_PORT: ${REDIS_PORT}
-      WEAPON_TYPE: ${WEAPON_TYPE}
+      WEAPON_TYPE: {{ lookup('env', 'WEAPON_TYPE') }}
       MARKET_TYPE: {{ market_type }}
 
 {% endfor %}
