--- a/deploy-global_worker.sh.j2
+++ b/deploy-global_worker.sh.j2
@@ -6,7 +6,7 @@ git pull
 
 docker-compose down
 
-BUILD_TYPE={{item}} WEAPON_TYPE="{{ weapon_types | join(',') }}" ansible-playbook prepare-build-config.yml
+BUILD_TYPE={{item}} WEAPON_TYPES="{{ weapon_types | join(',') }}" ansible-playbook prepare-build-config.yml
 
 # Pass current commit hash as the image tag
 COMMIT=`git rev-parse HEAD` docker-compose -f docker-compose.yml -f docker-compose-prod.yml up -d
