--- a/docker-compose.global_worker.build.yml.j2
+++ b/docker-compose.global_worker.build.yml.j2
@@ -64,7 +64,7 @@ services:
       SE_EVENT_BUS_HOST: seleniarm-hub
       SE_EVENT_BUS_PUBLISH_PORT: 4442
       SE_EVENT_BUS_SUBSCRIBE_PORT: 4443
-      SE_NODE_STEREOTYPE: '{"browserName": "chrome", "platformName": "Linux", "goog:chromeOptions": {"binary": "/usr/bin/chromium"}, "ps:weaponType":"{{ weapon_type }}" }'
+      SE_NODE_STEREOTYPE: '{"browserName": "chrome", "platformName": "Linux", "goog:chromeOptions": {"binary": "{{ "/usr/bin/chromium" if ansible_architecture == 'arm64' else "/usr/bin/google-chrome" }}"}, "ps:weaponType":"{{ weapon_type }}" }'
     networks:
       parser_net_{{ loop.index0 }}:
         ipv4_address: 172.{{ loop.index0 }}.0.5
