feat: use standalone to fix connection between nodes and hub

--- a/docker-compose.global_worker.build.yml.j2
+++ b/docker-compose.global_worker.build.yml.j2
@@ -14,9 +14,6 @@ x-global_api_parser_service: &global_api_parser_service
 
 {% set weapon_types = lookup('env', 'WEAPON_TYPES') | split(',') %}
 networks:
-  grid_net:
-    driver: bridge
-
 {% for weapon_type in weapon_types %}
   parser_net_{{ loop.index0 }}:
     driver: bridge
@@ -29,20 +26,12 @@ networks:
 
 {% endfor %}
 services:
-  seleniarm-hub:
-    image: {{ "seleniarm/hub:latest" if ansible_architecture == 'arm64' else "selenium/hub:latest" }}
-    container_name: selenium-hub
-    networks:
-      - grid_net
 {% for weapon_type in weapon_types %}
-      - parser_net_{{ loop.index0 }}
-{% endfor %}
-
-{% for weapon_type in weapon_types %}
-  {{ weapon_type.lower().replace('-', '_').replace(' ', '_') }}_global_parser:
+{% set weapon_short_name = weapon_type.lower().replace('-', '_').replace(' ', '_') %}
+  {{ weapon_short_name }}_global_parser:
     <<: *global_api_parser_service
     image: global_worker
-    container_name: {{ weapon_type.lower().replace('-', '_').replace(' ', '_') }}_global_parser
+    container_name: {{ weapon_short_name }}_global_parser
     environment:
       <<: *db_credentials
       REDIS_PWD: ${REDIS_PWD}
@@ -50,21 +39,18 @@ services:
       REDIS_PORT: ${REDIS_PORT}
       WEAPON_TYPE: {{ weapon_type }}
       MARKET_TYPES: {{ market_types | join(',') }}
+      CUSTOM_ALONE_NODE: {{ weapon_short_name }}-chrome-node
     networks:
       parser_net_{{ loop.index0 }}:
         ipv4_address: 182.{{ loop.index0 }}.0.4
 
-  {{ weapon_type.lower().replace('-', '_').replace(' ', '_') }}-seleniarm-chrome:
-    container_name: {{ weapon_type.lower().replace('-', '_').replace(' ', '_') }}-seleniarm-chrome
-    image: {{ "seleniarm/node-chromium:latest" if ansible_architecture == 'arm64' else "selenium/node-chrome:latest" }}
+  {{ weapon_short_name }}-chrome-node:
+    image: {{ "seleniarm/standalone-chromium:latest" if ansible_architecture == 'arm64' else "selenium/standalone-chrome:latest" }}
+    container_name: {{ weapon_short_name }}-chrome-node
+    hostname: {{ weapon_short_name }}-chrome-node
     volumes:
       - /dev/shm:/dev/shm
-    depends_on:
-      - seleniarm-hub
     environment:
-      SE_EVENT_BUS_HOST: seleniarm-hub
-      SE_EVENT_BUS_PUBLISH_PORT: 4442
-      SE_EVENT_BUS_SUBSCRIBE_PORT: 4443
       SE_NODE_STEREOTYPE: '{"browserName": "chrome", "platformName": "Linux", "goog:chromeOptions": {"binary": "{{ "/usr/bin/chromium" if ansible_architecture == 'arm64' else "/usr/bin/google-chrome" }}"}, "ps:weaponType":"{{ weapon_type }}" }'
     networks:
       parser_net_{{ loop.index0 }}:
