feat: added auto restart for threads and services

--- a/docker-compose.dashboard.build.yml.j2
+++ b/docker-compose.dashboard.build.yml.j2
@@ -15,6 +15,7 @@ services:
   web-dashboard:
     image: dashboard
     container_name: dashboard
+    restart: always
     build:
       context: .
       dockerfile: ./app/Dockerfile
