--- a/docker-compose.global_worker.prod.yml.j2
+++ b/docker-compose.global_worker.prod.yml.j2
@@ -8,6 +8,14 @@ services:
     logging:
       driver: journald
 
+{% for market_type_one_network_only in market_types_one_network_only %}
+  {{ weapon_type.lower().replace('-', '_').replace(' ', '_') }}_global_parser_{{ market_type_one_network_only }}:
+    <<: *global_api_parser_service
+    image: sprili/global_worker:${COMMIT}
+    logging:
+      driver: journald
+{% endfor %}
+
   {{ weapon_type.lower().replace('-', '_').replace(' ', '_') }}-chrome-node:
     logging:
       driver: journald
