--- a/app/app/tailwind.css
+++ b/app/app/tailwind.css
@@ -12,6 +12,18 @@
   body {
     @apply bg-dark-1 text-white min-h-screen font-inter;
   }
+
+  /* Chrome */
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
 }
 
 @layer utilities {
