feat: new price updater

--- a/docker-compose.infrastructure.prod.yml.j2
+++ b/docker-compose.infrastructure.prod.yml.j2
@@ -9,11 +9,7 @@ services:
     logging:
       driver: journald
 
-  seleniarm-chrome-node:
-    logging:
-      driver: journald
-
-  seleniarm-hub:
+  chrome-node:
     logging:
       driver: journald
 
