--- a/docker-compose.infrastructure.build.yml.j2
+++ b/docker-compose.infrastructure.build.yml.j2
@@ -46,26 +46,13 @@ services:
     networks:
       - parser_network
 
-  seleniarm-chrome-node:
-    deploy:
-      replicas: 1
-    image: {{ "seleniarm/node-chromium:latest" if ansible_architecture == 'arm64' else "selenium/node-chrome:latest" }}
+  chrome-node:
+    image: {{ "seleniarm/standalone-chromium:latest" if ansible_architecture == 'arm64' else "selenium/standalone-chrome:latest" }}
+    container_name: chrome-node
+    hostname: chrome-node
     restart: always
     volumes:
       - /dev/shm:/dev/shm
-    depends_on:
-      - seleniarm-hub
-    environment:
-      - SE_EVENT_BUS_HOST=seleniarm-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-    networks:
-      - parser_network
-
-  seleniarm-hub:
-    image: {{ "seleniarm/hub:latest" if ansible_architecture == 'arm64' else "selenium/hub:latest" }}
-    container_name: selenium-hub
-    restart: always
     networks:
       - parser_network
 
@@ -77,14 +64,17 @@ services:
       context: scrappers
       dockerfile: items_prices_parser/Dockerfile
     environment:
+      REDIS_PWD: ${REDIS_PWD}
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_HOST: db
       POSTGRES_PORT: 5432
+      CUSTOM_ALONE_NODE: chrome-node
     depends_on:
       - db
-      - seleniarm-hub
-      - seleniarm-chrome-node
+      - chrome-node
     networks:
       - parser_network
