--- a/app/app/tailwind.css
+++ b/app/app/tailwind.css
@@ -301,6 +301,82 @@
     overflow: hidden;
   }
 
+  .transform3D {
+    transform:
+      perspective(800px)
+      rotateY(-25deg) scale(1)
+      rotateX(10deg);
+    filter: blur(0);
+    opacity: 1;
+    transition: 0.6s ease all;
+
+    &:hover {
+      transform:
+        perspective(800px)
+        rotateY(0)
+        translateY(-30px)
+        rotateX(0)
+        scale(1);
+      filter: blur(0);
+      opacity: 1;
+      z-index:1000;
+    }
+  }
+
+  .flex-container {
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+      -webkit-justify-content: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-align-content: stretch;
+      -ms-flex-line-pack: stretch;
+      align-content: stretch;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+      }
+
+  .flex-item {
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+      flex: 0 1 auto;
+      -webkit-align-self: auto;
+      -ms-flex-item-align: auto;
+      align-self: auto;
+      }
+
+  .flex-item:not(:first-child) {
+    margin-left: -8%;
+    @apply hidden md:block
+  }
+
+  .flex-item:last-child {
+    @apply hidden lg:block
+  }
+
+  .glassmorph {
+      background: rgba( 255, 255, 255, 0.0 );
+      border-radius: 8px;
+      background-clip: padding-box;
+      backdrop-filter: blur(20px);
+  }
+
+  .carousel-shadow {
+    -webkit-box-shadow: inset 25px 0px 25px -25px rgba(0, 0, 0, 0.45), inset -25px 0px 25px -25px rgba(0, 0, 0, 0.45);
+    -moz-box-shadow: inset 25px 0px 25px -25px rgba(0, 0, 0, 0.45), inset -25px 0px 25px -25px rgba(0, 0, 0, 0.45);
+    box-shadow: inset 25px 0px 25px -25px rgba(0, 0, 0, 0.45), inset -25px 0px 25px -25px rgba(0, 0, 0, 0.45);
+  }
 
   /* User card */
   .user-card {
@@ -339,5 +415,4 @@
   .shad-button_ghost {
     @apply flex gap-4 items-center justify-start hover:bg-transparent hover:text-white !important;
   }
-
 }
