--- a/app/app/tailwind.css
+++ b/app/app/tailwind.css
@@ -301,25 +301,27 @@
     overflow: hidden;
   }
 
-  .transform3D {
-    transform:
-      perspective(800px)
-      rotateY(-25deg) scale(1)
-      rotateX(10deg);
-    filter: blur(0);
-    opacity: 1;
-    transition: 0.6s ease all;
-
-    &:hover {
+  @media screen and (min-width: 768px) {
+    .transform3D {
       transform:
         perspective(800px)
-        rotateY(0)
-        translateY(-30px)
-        rotateX(0)
-        scale(1);
+        rotateY(-25deg) scale(1)
+        rotateX(10deg);
       filter: blur(0);
       opacity: 1;
-      z-index:1000;
+      transition: 0.6s ease all;
+
+      &:hover {
+        transform:
+          perspective(800px)
+          rotateY(0)
+          translateY(-30px)
+          rotateX(0)
+          scale(1);
+        filter: blur(0);
+        opacity: 1;
+        z-index:1000;
+      }
     }
   }
 
