feat: direct link and liked items

--- a/app/app/tailwind.css
+++ b/app/app/tailwind.css
@@ -244,6 +244,9 @@
     @apply hover:bg-gradient-to-b rounded-[8px] border bg-dark-2 border-dark-4 hover:border-primary-500 py-2 min-w-[210px] min-h-[325px] hover:from-primary-500 hover:to-dark-3;
   }
 
+  .post-card_liked {
+    @apply transition-all duration-100
+  }
 
   .post-card_img {
     @apply h-[120px] hover:h-[130px] w-auto rounded-[24px] object-cover mt-[-10px] hover:mt-[-5px] hover:mb-[-5px] hover:mx-[-5px] transition-all duration-100 ease-in;
@@ -251,6 +254,10 @@
 
   .post-card:hover .post-card_img {
     @apply h-[130px] mt-[-15px] mb-[-5px] mx-[-5px];
+  }
+
+  .post-card:hover .post-card_liked {
+    @apply visible
   }
 
   .post-card_market_img {
