--- a/deploy-app.sh.j2
+++ b/deploy-app.sh.j2
@@ -5,6 +5,7 @@ cd /home/deploy/{{item}}
 git pull
 
 docker-compose down
+docker system prune --all
 
 BUILD_TYPE={{item}} ansible-playbook prepare-build-config.yml
 
