--- a/deploy-global_worker.sh.j2
+++ b/deploy-global_worker.sh.j2
@@ -7,7 +7,7 @@ git pull
 docker-compose down
 docker image prune -a -f
 
-BUILD_TYPE={{item}} WEAPON_TYPES="{{ weapon_types | join(',') }}" ansible-playbook prepare-build-config.yml
+BUILD_TYPE={{item}} WEAPON_TYPES="{{ weapon_types | join(',') }}" PROXY_LIST="{{ proxy_list | join(',') }}" ansible-playbook prepare-build-config.yml
 
 # Pass current commit hash as the image tag
 COMMIT=`git rev-parse HEAD` docker-compose -f docker-compose.yml -f docker-compose-prod.yml up -d
