--- a/docker-compose.infrastructure.build.yml.j2
+++ b/docker-compose.infrastructure.build.yml.j2
@@ -23,7 +23,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    container_name: pg
+    container_name: pg:16
     image: postgres
     restart: always
     volumes:
