--- a/docker-compose.infrastructure.build.yml.j2
+++ b/docker-compose.infrastructure.build.yml.j2
@@ -23,8 +23,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    container_name: pg:16
-    image: postgres
+    container_name: pg
+    image: postgres:16
     restart: always
     volumes:
       - db:/var/lib/postgresql/data
